--- a/public/main_page.html
+++ b/public/main_page.html
@@ -6,8 +6,17 @@
     <title>Document</title>
     <link rel="stylesheet" href="/public/styles/output.css">
 </head>
-<body>
-    <h1 class="user_name"></h1>
-    <h1 class="family_name"></h1>
+<body class="bg-emerald-900">
+    <header class="h-screen flex flex-col justify-center items-center text-amber-50">
+        <div>
+            <label class="text-4xl inline">Username: </label>
+            <h1 class="user_name text-4xl inline">dwada</h1>
+        </div>
+        <div>
+            <label class="text-4xl inline">Email: </label>
+            <h1 class="user_name text-4xl inline">dwada</h1>
+        </div>
+        
+    </header>
 </body>
 </html>
